Made radio buttons vertical to fix the no wrapping

--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ h1{font-size: 2.25rem!important;}
 
 #settings-label{display: block;  margin-left: 12.5% ; margin-right: auto;}
 
+.aperture-button{width: 150%!important}
+.shutter-speed-button{width: 115%!important}
+
  
 /* Tablet */
 @media (min-width: 601px) and (max-width: 1100px) {
